--- a/semana_3.html
+++ b/semana_3.html
@@ -39,7 +39,7 @@
    <li id="active"><a href="semana_3.html" class="active daddy">Semana 3</a>
    <ul>
       <li><a href="seccin.html" class="no-ch">Sección</a></li>
-      <li><a href="_actividades.html" class="no-ch">🛠️ Actividades</a></li>
+      <li><a href="actividades.html" class="no-ch">🛠️ Actividades</a></li>
    </ul>
    </li>
    <li><a href="semana_4.html" class="daddy">Semana 4</a>
